Added css for main app and changed to the desired color schemes

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
             <!-- pick a label between business and personal -->
 
-            <h4>Pick a label</h4>
+            <h4>Pick a category</h4>
             <div class="options">
                 <label>
                     <input 
@@ -68,7 +68,7 @@
             <!-- First checkbox for bussiness includes edit and delete -->
 
             <div class="list" id="todo-list">
-                <div class="todolist">
+                <!-- <div class="todo-item done">
                     <label>
                         <input type="checkbox">
                         <span class="bubble business"></span>
@@ -80,12 +80,12 @@
                         <button class="edit">Edit</button>
                         <button class="delete">Delete</button>
                     </div>
-                </div>
+                </div> -->
 
             <!-- Second checkbox for personal includes edit and delete -->
 
-            <div class="list" id="todo-list">
-                <div class="todolist">
+            <!-- <div class="list" id="todo-list">
+                <div class="todo-item done">
                     <label>
                         <input type="checkbox">
                         <span class="bubble personal"></span>
@@ -98,7 +98,7 @@
                         <button class="delete">Delete</button>
                     </div>
                  </div>
-                </div>
+                </div> -->
             </div>
         </section>
         <!-- End of the checkbox -->
