Added js to add todos, edit text and delete todos.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
             <!-- start the form input for what you forgot -->
         <section class="create-todo">
-            <form id="new-to-do-form">
+            <form id="new-todo-form">
 
             <h3>DID YOU FORGET</h3>
             <input 
